--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,58 +1,80 @@
 # 2024-02-13
 
-共 144 条
+共 163 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 11:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 12:01:49 GMT+0800 (China Standard Time) -->
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
-1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
+1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
-1. [正月初四“迎灶神”](https://so.toutiao.com/search?keyword=正月初四“迎灶神”)
 1. [尼格买提问春晚还要重播几次](https://so.toutiao.com/search?keyword=尼格买提问春晚还要重播几次)
-1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
 1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
 1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
+1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
+1. [中国首富手握两大“印钞机”](https://so.toutiao.com/search?keyword=中国首富手握两大“印钞机”)
+1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [喝酒不能助眠御寒](https://so.toutiao.com/search?keyword=喝酒不能助眠御寒)
+1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
+1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
+1. [醒狮现身伦敦新春庆典](https://so.toutiao.com/search?keyword=醒狮现身伦敦新春庆典)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
+1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
+1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
+1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
+1. [龙年首场寒潮来袭](https://so.toutiao.com/search?keyword=龙年首场寒潮来袭)
+1. [多因素共同作用 油价波动加剧](https://so.toutiao.com/search?keyword=多因素共同作用+油价波动加剧)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [00后整顿过年红包](https://so.toutiao.com/search?keyword=00后整顿过年红包)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
+1. [文班亚马新秀赛季使用率居历史第一](https://so.toutiao.com/search?keyword=文班亚马新秀赛季使用率居历史第一)
+1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
+1. [《我们一起摇太阳》好哭又好笑](https://so.toutiao.com/search?keyword=《我们一起摇太阳》好哭又好笑)
+1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
 1. [女子回老家过年 弟弟团列队迎接](https://so.toutiao.com/search?keyword=女子回老家过年+弟弟团列队迎接)
+1. [川崎前锋主帅：对阵泰山目标拿三分](https://so.toutiao.com/search?keyword=川崎前锋主帅：对阵泰山目标拿三分)
+1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
+1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
+1. [文班亚马27+14+10帽 马刺复仇猛龙](https://so.toutiao.com/search?keyword=文班亚马27+14+10帽+马刺复仇猛龙)
+1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
+1. [字母哥36+18 雄鹿17分大胜掘金](https://so.toutiao.com/search?keyword=字母哥36+18+雄鹿17分大胜掘金)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [媒体对话《南来北往》编剧](https://so.toutiao.com/search?keyword=媒体对话《南来北往》编剧)
+1. [美股涨跌不一 道指再创新高](https://so.toutiao.com/search?keyword=美股涨跌不一+道指再创新高)
+1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [金晨秒猜白敬亭魏大勋歌声](https://so.toutiao.com/search?keyword=金晨秒猜白敬亭魏大勋歌声)
+1. [刘和平：要警惕菲律宾在南海挑冲突](https://so.toutiao.com/search?keyword=刘和平：要警惕菲律宾在南海挑冲突)
+1. [Arm涨幅扩大至30%以上](https://so.toutiao.com/search?keyword=Arm涨幅扩大至30%以上)
+1. [中国男篮集结备战亚洲杯预选赛](https://so.toutiao.com/search?keyword=中国男篮集结备战亚洲杯预选赛)
+1. [较强冷空气开始影响我国大部地区](https://so.toutiao.com/search?keyword=较强冷空气开始影响我国大部地区)
+1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
+1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
+1. [正月初四“迎灶神”](https://so.toutiao.com/search?keyword=正月初四“迎灶神”)
 1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
 1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
 1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
-1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
-1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
-1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
-1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
 1. [媒体：贾玲是中国电影圈真“芭比”](https://so.toutiao.com/search?keyword=媒体：贾玲是中国电影圈真“芭比”)
 1. [看完热辣滚烫的后遗症来了](https://so.toutiao.com/search?keyword=看完热辣滚烫的后遗症来了)
 1. [“醉关公”回应踩高跷表演走红](https://so.toutiao.com/search?keyword=“醉关公”回应踩高跷表演走红)
-1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
 1. [大年三十民警收到邻居阿姨送的早餐](https://so.toutiao.com/search?keyword=大年三十民警收到邻居阿姨送的早餐)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
-1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
-1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
 1. [津媒分析泰山队VS川崎前锋取胜可能](https://so.toutiao.com/search?keyword=津媒分析泰山队VS川崎前锋取胜可能)
-1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
-1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
 1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
 1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [意甲：贾内蒂制胜 尤文0-1乌迪内斯](https://so.toutiao.com/search?keyword=意甲：贾内蒂制胜+尤文0-1乌迪内斯)
 1. [小柯基回村过年变身“有轨电狗”](https://so.toutiao.com/search?keyword=小柯基回村过年变身“有轨电狗”)
 1. [一群男子拍合照 发型是亮点](https://so.toutiao.com/search?keyword=一群男子拍合照+发型是亮点)
-1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
 1. [以方称将提供撤离拉法的安全通道](https://so.toutiao.com/search?keyword=以方称将提供撤离拉法的安全通道)
 1. [希林娜依高发文支持《热辣滚烫》](https://so.toutiao.com/search?keyword=希林娜依高发文支持《热辣滚烫》)
 1. [乌称俄军在用“星链” 马斯克回应](https://so.toutiao.com/search?keyword=乌称俄军在用“星链”+马斯克回应)
-1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
-1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
 1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
 1. [前意甲裁判分析尤文VS乌迪内斯判罚](https://so.toutiao.com/search?keyword=前意甲裁判分析尤文VS乌迪内斯判罚)
 1. [加拉格尔社媒庆祝切尔西客胜水晶宫](https://so.toutiao.com/search?keyword=加拉格尔社媒庆祝切尔西客胜水晶宫)
-1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
 1. [陈若琳：我在全红婵身上看到自己](https://so.toutiao.com/search?keyword=陈若琳：我在全红婵身上看到自己)
 1. [《第二十条》法律不是冰冷的逻辑](https://so.toutiao.com/search?keyword=《第二十条》法律不是冰冷的逻辑)
 1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
@@ -67,15 +89,12 @@
 1. [湖人主帅：考虑用三后卫阵容](https://so.toutiao.com/search?keyword=湖人主帅：考虑用三后卫阵容)
 1. [比特币向上触及50000美元/枚](https://so.toutiao.com/search?keyword=比特币向上触及50000美元/枚)
 1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
-1. [《我们一起摇太阳》好哭又好笑](https://so.toutiao.com/search?keyword=《我们一起摇太阳》好哭又好笑)
 1. [警匪动作片《缉恶》打得有多硬核](https://so.toutiao.com/search?keyword=警匪动作片《缉恶》打得有多硬核)
-1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
 1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
 1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
 1. [大年初四一起齐乐龙龙](https://so.toutiao.com/search?keyword=大年初四一起齐乐龙龙)
 1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
 1. [丁威迪：能招募我归功于詹姆斯](https://so.toutiao.com/search?keyword=丁威迪：能招募我归功于詹姆斯)
-1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
 1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
 1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
 1. [“白敬亭春山学事件”到底怎么回事](https://so.toutiao.com/search?keyword=“白敬亭春山学事件”到底怎么回事)
