--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,57 +1,76 @@
 # 2024-02-13
 
-共 163 条
+共 179 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 12:01:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 13:00:33 GMT+0800 (China Standard Time) -->
+1. [福茂集团董事长赵安吉因车祸去世](https://so.toutiao.com/search?keyword=福茂集团董事长赵安吉因车祸去世)
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
+1. [舞龙舞狮打铁花 春节哪里最热闹](https://so.toutiao.com/search?keyword=舞龙舞狮打铁花+春节哪里最热闹)
+1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
+1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
+1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
+1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
+1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [中国首富手握两大“印钞机”](https://so.toutiao.com/search?keyword=中国首富手握两大“印钞机”)
+1. [卡尔森称普京愿在乌克兰问题上妥协](https://so.toutiao.com/search?keyword=卡尔森称普京愿在乌克兰问题上妥协)
+1. [撒贝宁李白带龙凤胎回武汉过年](https://so.toutiao.com/search?keyword=撒贝宁李白带龙凤胎回武汉过年)
+1. [喝酒不能助眠御寒](https://so.toutiao.com/search?keyword=喝酒不能助眠御寒)
+1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
+1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [文班亚马10帽刷新生涯纪录](https://so.toutiao.com/search?keyword=文班亚马10帽刷新生涯纪录)
+1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
+1. [库里25+6+10+3 勇士擒爵士获5连胜](https://so.toutiao.com/search?keyword=库里25+6+10+3+勇士擒爵士获5连胜)
+1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
+1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
+1. [郑州中原棋遇记回应被指拒收人民币](https://so.toutiao.com/search?keyword=郑州中原棋遇记回应被指拒收人民币)
+1. [小米回复印度政府：深感忧虑](https://so.toutiao.com/search?keyword=小米回复印度政府：深感忧虑)
+1. [女子结婚15年坚持和自己父母过年](https://so.toutiao.com/search?keyword=女子结婚15年坚持和自己父母过年)
+1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
+1. [李雪琴谈和乔杉拍情感戏的感受](https://so.toutiao.com/search?keyword=李雪琴谈和乔杉拍情感戏的感受)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
+1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [记者：不明白为何马刺排名西部垫底](https://so.toutiao.com/search?keyword=记者：不明白为何马刺排名西部垫底)
+1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
+1. [国际篮联战力榜：中国女篮降至第五](https://so.toutiao.com/search?keyword=国际篮联战力榜：中国女篮降至第五)
+1. [文班单场至少20分10板10帽5助](https://so.toutiao.com/search?keyword=文班单场至少20分10板10帽5助)
+1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
+1. [小朋友是不会说谎的](https://so.toutiao.com/search?keyword=小朋友是不会说谎的)
+1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
+1. [中国男篮集结备战亚洲杯预选赛](https://so.toutiao.com/search?keyword=中国男篮集结备战亚洲杯预选赛)
+1. [女子回老家过年 弟弟团列队迎接](https://so.toutiao.com/search?keyword=女子回老家过年+弟弟团列队迎接)
+1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [周一围新剧被好兄弟背刺](https://so.toutiao.com/search?keyword=周一围新剧被好兄弟背刺)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [Arm涨幅扩大至30%以上](https://so.toutiao.com/search?keyword=Arm涨幅扩大至30%以上)
+1. [博雷利：美国应减少军援以色列](https://so.toutiao.com/search?keyword=博雷利：美国应减少军援以色列)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
+1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
+1. [浓眉：丁威迪球商非常高](https://so.toutiao.com/search?keyword=浓眉：丁威迪球商非常高)
+1. [小杨哥掉水里 大杨哥被鞭炮炸伤](https://so.toutiao.com/search?keyword=小杨哥掉水里+大杨哥被鞭炮炸伤)
 1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
 1. [尼格买提问春晚还要重播几次](https://so.toutiao.com/search?keyword=尼格买提问春晚还要重播几次)
-1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
-1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
-1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
-1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [中国首富手握两大“印钞机”](https://so.toutiao.com/search?keyword=中国首富手握两大“印钞机”)
-1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
-1. [喝酒不能助眠御寒](https://so.toutiao.com/search?keyword=喝酒不能助眠御寒)
 1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
-1. [演员王东承认家暴](https://so.toutiao.com/search?keyword=演员王东承认家暴)
 1. [醒狮现身伦敦新春庆典](https://so.toutiao.com/search?keyword=醒狮现身伦敦新春庆典)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
-1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
-1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
-1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
-1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
 1. [龙年首场寒潮来袭](https://so.toutiao.com/search?keyword=龙年首场寒潮来袭)
 1. [多因素共同作用 油价波动加剧](https://so.toutiao.com/search?keyword=多因素共同作用+油价波动加剧)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
 1. [00后整顿过年红包](https://so.toutiao.com/search?keyword=00后整顿过年红包)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
 1. [文班亚马新秀赛季使用率居历史第一](https://so.toutiao.com/search?keyword=文班亚马新秀赛季使用率居历史第一)
-1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
 1. [《我们一起摇太阳》好哭又好笑](https://so.toutiao.com/search?keyword=《我们一起摇太阳》好哭又好笑)
-1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
-1. [女子回老家过年 弟弟团列队迎接](https://so.toutiao.com/search?keyword=女子回老家过年+弟弟团列队迎接)
 1. [川崎前锋主帅：对阵泰山目标拿三分](https://so.toutiao.com/search?keyword=川崎前锋主帅：对阵泰山目标拿三分)
-1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
-1. [男子总结今年春节三大反常现象](https://so.toutiao.com/search?keyword=男子总结今年春节三大反常现象)
 1. [文班亚马27+14+10帽 马刺复仇猛龙](https://so.toutiao.com/search?keyword=文班亚马27+14+10帽+马刺复仇猛龙)
-1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
 1. [字母哥36+18 雄鹿17分大胜掘金](https://so.toutiao.com/search?keyword=字母哥36+18+雄鹿17分大胜掘金)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
-1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
 1. [媒体对话《南来北往》编剧](https://so.toutiao.com/search?keyword=媒体对话《南来北往》编剧)
 1. [美股涨跌不一 道指再创新高](https://so.toutiao.com/search?keyword=美股涨跌不一+道指再创新高)
-1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
 1. [金晨秒猜白敬亭魏大勋歌声](https://so.toutiao.com/search?keyword=金晨秒猜白敬亭魏大勋歌声)
 1. [刘和平：要警惕菲律宾在南海挑冲突](https://so.toutiao.com/search?keyword=刘和平：要警惕菲律宾在南海挑冲突)
-1. [Arm涨幅扩大至30%以上](https://so.toutiao.com/search?keyword=Arm涨幅扩大至30%以上)
-1. [中国男篮集结备战亚洲杯预选赛](https://so.toutiao.com/search?keyword=中国男篮集结备战亚洲杯预选赛)
 1. [较强冷空气开始影响我国大部地区](https://so.toutiao.com/search?keyword=较强冷空气开始影响我国大部地区)
 1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
@@ -78,11 +97,8 @@
 1. [陈若琳：我在全红婵身上看到自己](https://so.toutiao.com/search?keyword=陈若琳：我在全红婵身上看到自己)
 1. [《第二十条》法律不是冰冷的逻辑](https://so.toutiao.com/search?keyword=《第二十条》法律不是冰冷的逻辑)
 1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
-1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
 1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
-1. [小米回复印度政府：深感忧虑](https://so.toutiao.com/search?keyword=小米回复印度政府：深感忧虑)
 1. [《热辣滚烫》曝新海报](https://so.toutiao.com/search?keyword=《热辣滚烫》曝新海报)
-1. [李雪琴谈和乔杉拍情感戏的感受](https://so.toutiao.com/search?keyword=李雪琴谈和乔杉拍情感戏的感受)
 1. [沈阳北陵公园冰雪大世界停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界停止开放)
 1. [专家：以色列空袭拉法有双重目的](https://so.toutiao.com/search?keyword=专家：以色列空袭拉法有双重目的)
 1. [白鹿把《声声慢》唱出了江南韵味](https://so.toutiao.com/search?keyword=白鹿把《声声慢》唱出了江南韵味)
